-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
5.15.14, 6.5.1
-
4188b7e2a (dev), b2b90c7cf (dev), 3d4b0137f (6.6), 1b8c6d959 (6.5), 202b792ed (tqtc/lts-6.2), 9189ea15f (tqtc/lts-5.15)
This seems wrong anyway, but setting objects as a context property that uses a number as the name doesn't get freed if another value is written on it.
| For Gerrit Dashboard: QTBUG-115319 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 492458,7 | Context properties: Don't trigger an assert for numeric names | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 492459,7 | Context properties: Warn if name is numeric | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 493346,2 | Context properties: Don't trigger an assert for numeric names | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 493347,2 | Context properties: Don't trigger an assert for numeric names | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 493352,4 | Context properties: Don't trigger an assert for numeric names | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 493353,3 | Context properties: Don't trigger an assert for numeric names | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |