src/qml/jsruntime/qv4identifiertable_p.h
@@ -55,7 +55,8 @@ public:
         return asPropertyKey(str->d());
     }
 
-    PropertyKey asPropertyKey(const QString &s);
+    enum KeyConversionBehavior { Default, ForceConversionToId };
+    PropertyKey asPropertyKey(const QString &s, KeyConversionBehavior conversionBehavior = Default);
     PropertyKey asPropertyKey(const char *s, int len);
 
     PropertyKey asPropertyKeyImpl(const Heap::String *str);
